# RobotMaster-armour-recognition-through-light-and-cv-model

./: LICENSE  README.md  compile_commands.json  train.py
.cache/clangd/index/: hikvision_ros2_driver.cpp.44CBAC5AC41D893A.idx  hikvision_ros2_driver.hpp.A5393EF5F8E518AB.idx
hikvision_interface/: package.xml
hikvision_ros2_driver/: CMakeLists.txt  package.xml
hikvision_ros2_driver/config/: three_streams.rviz
hikvision_ros2_driver/include/hikvision_ros2_driver/: hikvision_ros2_driver.hpp
hikvision_ros2_driver/launch/: camera_with_recognizer_and_rviz.launch.py  camera_with_rviz.launch.py
hikvision_ros2_driver/scripts/: armor_recognizer_node.py  test_lightbar_detector.py
hikvision_ros2_driver/src/: README2.md  backup.cpp  hikvision_ros2_driver.cpp
install/: local_setup.sh  setup.sh
install/hikvision_interface/share/hikvision_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hikvision_interface/share/hikvision_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_hikvision_interface__rosidl_generator_cExport-noconfig.cmake  export_hikvision_interface__rosidl_generator_cExport-relwithdebinfo.cmake  export_hikvision_interface__rosidl_generator_pyExport-noconfig.cmake  export_hikvision_interface__rosidl_generator_pyExport-relwithdebinfo.cmake  export_hikvision_interface__rosidl_generator_pyExport.cmake  export_hikvision_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_hikvision_interface__rosidl_typesupport_fastrtps_cExport-relwithdebinfo.cmake  export_hikvision_interface__rosidl_typesupport_fastrtps_cppExport-relwithdebinfo.cmake  hikvision_interfaceConfig-version.cmake  hikvision_interfaceConfig.cmake  hikvision_interface__rosidl_typesupport_cppExport-noconfig.cmake  hikvision_interface__rosidl_typesupport_cppExport-relwithdebinfo.cmake  hikvision_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  hikvision_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  hikvision_interface__rosidl_typesupport_introspection_cppExport-relwithdebinfo.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/hikvision_interface/share/hikvision_interface/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/hikvision_interface/share/hikvision_interface/msg/: HikImageInfo.idl  HikImageInfo.json  HikImageInfo.msg
install/hikvision_ros2_driver/include/hikvision_ros2_driver/: hikvision_ros2_driver.hpp
install/hikvision_ros2_driver/lib/hikvision_ros2_driver/: armor_recognizer_node.py  hikvision_ros2_driver_node
install/hikvision_ros2_driver/share/hikvision_ros2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hikvision_ros2_driver/share/hikvision_ros2_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  hikvision_ros2_driverConfig.cmake  (+2 more)
log/: latest_build
opencv-algorithm-used/: CMakeLists.txt  README about pytorch.md  README.md  predict.py
opencv-algorithm-used/src/practical/: find4main.cpp  main.cpp  main2.cpp  main3.cpp  testmain.cpp
opencv-algorithm-used/src/usage/: main.cpp
tools/: verify_crop_vs_preproc.py
(+32 files in other folders)
